--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-runtime": "^6.22.0",
     "bcrypt": "^1.0.2",
     "meteor-node-stubs": "~0.2.0",
+    "ng-file-upload": "^12.2.13",
+    "ng-img-crop": "^0.2.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
