--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular": "^1.5.3",
     "angular-google-maps": "^2.3.2",
     "angular-meteor": "^1.3.9",
+    "angular-moment": "^1.0.1",
     "angular-simple-logger": "^0.1.7",
     "angular-ui-router": "^0.2.18",
     "angular-utils-pagination": "^0.11.1",
